samples/_failures_safe/1761312628_9cd1e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43464bdb.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_43464bdb.c:136:5: error: expected declaration or statement at end of input
  136 |     } else {
      |     ^
./samples/SAFE/__tmp_43464bdb.c:136:5: error: expected declaration or statement at end of input
